# oslo.service

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  bandit.yaml  lower-constraints.txt  openstack-common.conf  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst  installation.rst  usage.rst
doc/source/api/: eventlet_backdoor.rst  service.rst
doc/source/configuration/: index.rst
doc/source/install/: index.rst
doc/source/reference/: eventlet_backdoor.rst  index.rst
doc/source/user/: backend.rst  index.rst  usage.rst
oslo.service/locale/: oslo.service-log-critical.pot  oslo.service-log-error.pot  oslo.service-log-info.pot  oslo.service-log-warning.pot  oslo.service.pot
oslo_service/: __init__.py  _i18n.py  _multiprocessing.py  _options.py  eventlet_backdoor.py  fixture.py  loopingcall.py  opts.py  periodic_task.py  service.py  sslutils.py  systemd.py  threadgroup.py  version.py  wsgi.py
oslo_service/backend/: __init__.py  base.py  exceptions.py
oslo_service/backend/_common/: constants.py  loopingcall.py  service.py  threadgroup.py
oslo_service/backend/_eventlet/: __init__.py  loopingcall.py  service.py  threadgroup.py
oslo_service/backend/_threading/: __init__.py  loopingcall.py  service.py  threadgroup.py
oslo_service/backend/common/: daemon_utils.py  signal_utils.py  singleton.py  validation_utils.py
oslo_service/backend/eventlet/: __init__.py  loopingcall.py  service.py  threadgroup.py
oslo_service/backend/threading/: __init__.py  loopingcall.py  service.py  threadgroup.py
oslo_service/locale/en_GB/LC_MESSAGES/: oslo_service-log-error.po  oslo_service-log-info.po  oslo_service-log-warning.po  oslo_service.po
oslo_service/tests/: __init__.py  base.py  eventlet_service.py  test_eventlet_backdoor.py  test_fixture.py  test_loopingcall.py  test_multiprocessing.py  test_opts.py  test_periodic.py  test_service.py  test_spawn_context_integration.py  test_sslutils.py  test_systemd.py  test_threadgroup.py  test_wsgi.py
oslo_service/tests/backend/tests/: test_backend_base.py  test_backend_init.py
oslo_service/tests/backend/threading/: test_launcher.py  test_signal_handler.py  test_threadgroup.py
oslo_service/tests/functional/: __init__.py  test_fork_safety_regression.py
oslo_service/tests/ssl_cert/: ca.crt  certificate.crt
releasenotes/notes/: accept-wait-interval-threading-fc02f76056cbaed4.yaml  add-backend-system-eventlet-migration-deprecations-da46d5a70d7f057d.yaml  add-signal-handler-for-service-launched-on-main-process-51913add4552949f.yaml  add-threading-backend-9b0e601e5c1282e1.yaml  add-wsgi_server_debug-opt-70d818b5b78bfc7c.yaml  deprecate-version-module-0d0d44b2284215b8.yaml  fix-check-conf-pickle-e78baf2ba71be11b.yaml  fix-find-object-in-backdoor-487bf78c4c502594.yaml  fix-threading-shutdown-cotyledon-3aff6ca0eb0125f5.yaml  fix-threading-signal-handler-4b396feab5d75db3.yaml  fix-unpicklable-second-service-crash-b2141304.yaml  multiprocessing-spawn-utilities-abaeb920e98b692d.yaml  native-threads-on-child-7150690c7caa1013.yaml  pickle-threading-service-c6d8e5f85c761068.yaml  refactor-service-spawn-safe.yaml  remove-deprecated-ssl-opts-46e9d7a53f725340.yaml  rename-backend-submodules-to-private-63bfa674677c3854.yaml  restore-max_threads-90eaa89993cd192d.yaml  run-periodic-tasks-in-parallel-spawn-31469d3375e30a57.yaml  service-children-SIGHUP-15d0cf6d2a1bdbf9.yaml  set_service_opts-fca7a4e8dbd4cdbf.yaml  threading-threadgroup-thread-done-auto-call-e64f74c8cd6c6d3c.yaml  undeprecate-wsgi-7e5306403625b8c6.yaml  wsgi-server-threading-backend-protection-a8f3d2e19b5c7f84.yaml
releasenotes/source/: conf.py  index.rst
releasenotes/source/locale/en_GB/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/fr/LC_MESSAGES/: releasenotes.po
tools/: poc_run_periodic_tasks_in_parallel.py
