[metadata]
name = oslo.service
summary = oslo.service library
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/oslo.service/latest/
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    oslo_service

[entry_points]
oslo.config.opts =
    oslo.service.periodic_task = oslo_service.periodic_task:list_opts
    oslo.service.service = oslo_service.service:list_opts
    oslo.service.sslutils = oslo_service.sslutils:list_opts
    oslo.service.wsgi = oslo_service.wsgi:list_opts

[upload_sphinx]
upload-dir = doc/build/html
